--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ font-family: 'Josefin Sans', sans-serif;
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     background-image: linear-gradient(to bottom, var(--backgroundColor), var(--backgroundColorLight));
     position: relative;
 }
@@ -132,6 +132,9 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: var(--divColor);
+
+
 }
 
 .body__infoContainer-output,
@@ -139,6 +142,23 @@ body {
 .body__infoContainer-p-right {
     font-family: 'Josefin Sans', sans-serif;
     color: var(--fontColor2);
-    font-size: 0.7rem;
+    font-size: 0.8rem;
+    cursor: pointer;
 }
+
+.body__infoContainer-p-right {
+    margin-right: 1rem;
+    margin-left: auto;
+}
+
+.body__infoContainer-output {
+    margin-left: 1rem;
+    margin-right: auto;
+}
+
+.body__infoContainer-p-center {
+    margin-left: 1rem;
+}
+
+
 
